newpid (2) UNRELEASED; urgency=low

  * Add autopkgtest.

 -- Christoph Berg <myon@debian.org>  Tue, 24 Dec 2013 11:58:27 +0200

newpid (1) UNRELEASED; urgency=low

  * Initial release.

 -- Christoph Berg <myon@debian.org>  Mon, 21 Jan 2013 22:48:32 +0100